<resources>
    <string name="app_name">Notes</string>
    <string name="setupforfirstuse">Set up for first use</string>
    <string name="changelanguage">Select language</string>
    <string name="select">changelanguage</string>
    <string name="name">Name</string>
    <string name="Date">Date</string>
    <string name="Grid">Grid</string>
    <string name="Notes">Notes</string>
    <string name="Checklist">Checklist</string>
    <string name="Done">Done</string>
    <string name="Itemdeleted">Item deleted</string>
    <string name="undo">U N D O</string>
    <string name="pin">Pin</string>
    <string name="discardchanges">Discard Changes</string>
    <string name="Delete">Delete</string>
    <string name="unpin">Unpin</string>
    <string name="unarchive">Unarchive</string>
    <string name="Restore">Restore</string>
    <string name="RateApp">Rate App</string>
    <string name="ShareApp">Share App</string>
    <string name="Settings">Settings </string>
    <string name="Trash">Trash</string>
    <string name="Aechive">Archive</string>
    <string name="ratetext">How was your experience with us ?</string>
    <string name="maybelater">may be later</string>
    <string name="Data">Data</string>
    <string name="BackuporRestore">Backup or Restore</string>
    <string name="Movecheckedtothebottom">Move checked to the bottom</string>
    <string name="CallNote">Call Note</string>
    <string name="Showflotingnoteduringcall">Show floting note during call</string>
    <string name="Shownoteaftercall">Show note after call</string>
    <string name="Security">Security</string>
    <string name="EnablePasscode">Enable Passcode</string>
    <string name="ChangePasscode">Change Passcode</string>
    <string name="English">English</string>
    <string name="Other">Other</string>
    <string name="Ratethisapp">Rate this app</string>
    <string name="Sharewithfriend">Share with friend</string>
    <string name="Privacypolicy">Privacy policy</string>
    <string name="list">List</string>
    <string name="Skip">Skip</string>
    <string name="GetStarted">Get Started</string>
    <string name="Next">Next</string>
    <string name="TAptoaddnewnote">Tap to add new note</string>
    <string name="Mode">Mode</string>
    <string name="Lightmode">Light mode</string>
    <string name="EnterNewPasscode">Enter New Passcode</string>
    <string name="EnterOldPasscode">Enter Old Passcode</string>
    <string name="ReenterPasscode">Re-enter Passcode</string>
    <string name="PasscodesdonotmatchEnterNewPasscode">Passcodes do not match! Enter New Passcode</string>
    <string name="IncorrectPasscodeTryagain">Incorrect Passcode. Try again.</string>
    <string name="Areyousureyouwanttodiscardallchanges">Are you sure you want to discard all changes?</string>
    <string name="DiscardChanges">Discard Changes?</string>
    <string name="No">No</string>
    <string name="Notetitle">Note title</string>
    <string name="Typesomething">Type something ....</string>
    <string name="PLEASEBACKAGAINTOEXIT">PLEASE BACK AGAIN TO EXIT</string>
</resources>