<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="210dp"
    android:background="@drawable/textviewbackgrounf"
    android:paddingVertical="20dp"
    android:paddingStart="20dp"
    android:backgroundTint="@color/darkgray"

    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pin"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pin_svgrepo_com"
            android:layout_gravity="center"
            android:id="@+id/pinicon"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:gravity="start"
            android:text="@string/pin"
            android:id="@+id/pintext"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/decardchanges"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/navigation_back_arrow_svgrepo_com"
            android:layout_gravity="center"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:gravity="start"
            android:text="@string/discardchanges"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="visible" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/delete"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_2_svgrepo_com"
            android:layout_gravity="center"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:gravity="start"
            android:text="@string/Delete"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>